# RapidOcrOnnx

./: .gitignore  BUILD.md  CMakeLists.txt  build.bat  download.ps1  publish-x64-cuda.bat
include/: OcrLiteCApi.h
src/: CrnnNet.cpp  OcrLite.cpp  OcrLiteCApi.cpp
